--- a/AMSv3Samples/VideoIndexerSample/package.json
+++ b/AMSv3Samples/VideoIndexerSample/package.json
@@ -20,7 +20,7 @@
   "main": "./index.js",
   "license": "MIT",
   "dependencies": {
-    "azure-arm-mediaservices": "^3.0.0-preview",
+    "azure-arm-mediaservices": "^4.0.0",
     "azure-storage": "^2.8.0",
     "ms-rest": "^2.3.3",
     "ms-rest-azure": "^2.5.5"
