--- a/AMSv3Samples/sample.env
+++ b/AMSv3Samples/sample.env
@@ -19,3 +19,5 @@ AZURE_SUBSCRIPTION_ID= ""
 AZURE_ARM_AUDIENCE= "https://management.core.windows.net"
 AZURE_ARM_ENDPOINT="https://management.azure.com"
 
+# DRM Testing
+DRM_SYMMETRIC_KEY="add random base 64 encoded string here"
