--- a/AMSv3Samples/tsconfig.json
+++ b/AMSv3Samples/tsconfig.json
@@ -34,6 +34,7 @@
   ],
   "include": [
     "HelloWorld-ListAssets/*.ts",
-    "StreamFilesSample/*.ts"
+    "StreamFilesSample/*.ts",
+    "StreamFilesWithDRMSample/*.ts"
   ]
 }
