--- a/AMSv3Samples/tsconfig.json
+++ b/AMSv3Samples/tsconfig.json
@@ -35,6 +35,7 @@
   "include": [
     "HelloWorld-ListAssets/*.ts",
     "StreamFilesSample/*.ts",
-    "StreamFilesWithDRMSample/*.ts"
+    "StreamFilesWithDRMSample/*.ts",
+    "VideoIndexerSample/*.ts"
   ]
 }
