--- a/AMSv3Samples/tsconfig.json
+++ b/AMSv3Samples/tsconfig.json
@@ -36,6 +36,7 @@
     "HelloWorld-ListAssets/*.ts",
     "StreamFilesSample/*.ts",
     "StreamFilesWithDRMSample/*.ts",
-    "VideoIndexerSample/*.ts"
+    "VideoIndexerSample/*.ts",
+    "Live/*.ts"
   ]
 }
