--- a/AMSv3Samples/package.json
+++ b/AMSv3Samples/package.json
@@ -27,12 +27,14 @@
     "moment": "^2.29.1",
     "njwt": "^1.0.0",
     "path": "^0.12.7",
+    "readline-sync": "^1.4.10",
     "util": "^0.12.3",
     "uuid": "^8.3.2",
     "whatwg-url": "^8.4.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/readline-sync": "^1.4.3",
     "@types/uuid": "^8.3.0",
     "@types/whatwg-url": "^8.0.0",
     "dotenv": "^8.0.0",
