--- a/AMSv3Samples/sample.env
+++ b/AMSv3Samples/sample.env
@@ -1,24 +1,25 @@
 # copy the content of this file to a file named ".env". It should be stored at the root of the repo.
 # Make sure to exclude this file from Git Hub checkins using a .gitignore file
 # The values can be obtained from the API Access page for your Media Services account in the portal.
-AZURE_CLIENT_ID=""
-AZURE_CLIENT_SECRET= ""
-AZURE_TENANT_ID= ""
+AADCLIENTID=""
+AADSECRET= ""
+AADTENANTID= ""
 
 # Change this to match your AAD Tenant domain name. 
-AAD_TENANT_DOMAIN = "microsoft.onmicrosoft.com"
+AADTENANTDOMAIN = "microsoft.onmicrosoft.com"
 
 # Set this to your Media Services Account name, resource group it is contained in, and location
-AZURE_MEDIA_ACCOUNT_NAME = ""
-AZURE_LOCATION= ""
-AZURE_RESOURCE_GROUP= ""
+ACCOUNTNAME = ""
+LOCATION= ""
+RESOURCEGROUP= ""
 
 # Set this to your Azure Subscription ID
-AZURE_SUBSCRIPTION_ID= ""
+SUBSCRIPTIONID= ""
 
 # You must change these if you are using Gov Cloud, China, or other non standard cloud regions
-AZURE_ARM_AUDIENCE= "https://management.core.windows.net"
-AZURE_ARM_ENDPOINT="https://management.azure.com"
+ARMAADAUDIENCE= "https://management.core.windows.net"
+ARMENDPOINT="https://management.azure.com"
+AADENDPOINT="https://login.microsoftonline.com"
 
 # DRM Testing
-DRM_SYMMETRIC_KEY="add random base 64 encoded string here"
+DRMSYMMETRICKEY="add random base 64 encoded string here"
