--- a/AMSv3Samples/sample.env
+++ b/AMSv3Samples/sample.env
@@ -1,25 +1,22 @@
 # copy the content of this file to a file named ".env". It should be stored at the root of the repo.
 # Make sure to exclude this file from Git Hub checkins using a .gitignore file
+
 # The values can be obtained from the API Access page for your Media Services account in the portal.
-AADCLIENTID=""
-AADSECRET= ""
-AADTENANTID= ""
+AADCLIENTID="00000000-0000-0000-0000-000000000000"
+AADSECRET="00000000-0000-0000-0000-000000000000"
+AADTENANTDOMAIN="microsoft.onmicrosoft.com"
+AADTENANTID="00000000-0000-0000-0000-000000000000"
+ACCOUNTNAME="amsaccount"
+LOCATION="West US 2"
+RESOURCEGROUP="amsResourceGroup"
+SUBSCRIPTIONID="00000000-0000-0000-0000-000000000000"
+ARMAADAUDIENCE="https://management.core.windows.net/"
+ARMENDPOINT="https://management.azure.com/"
 
-# Change this to match your AAD Tenant domain name. 
-AADTENANTDOMAIN = "microsoft.onmicrosoft.com"
-
-# Set this to your Media Services Account name, resource group it is contained in, and location
-ACCOUNTNAME = ""
-LOCATION= ""
-RESOURCEGROUP= ""
-
-# Set this to your Azure Subscription ID
-SUBSCRIPTIONID= ""
-
-# You must change these if you are using Gov Cloud, China, or other non standard cloud regions
-ARMAADAUDIENCE= "https://management.core.windows.net"
-ARMENDPOINT="https://management.azure.com"
+# You must change this if you are using Gov Cloud, China, or other non standard cloud regions
 AADENDPOINT="https://login.microsoftonline.com"
+
+# Settings for the samples
 
 # DRM Testing
 DRMSYMMETRICKEY="add random base 64 encoded string here"
