--- a/AMSv3Samples/package.json
+++ b/AMSv3Samples/package.json
@@ -15,12 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "@azure/abort-controller": "^1.0.2",
-    "@azure/arm-mediaservices": "^8.0.0",
+    "@azure/arm-mediaservices": "^8.1.0",
     "@azure/ms-rest-azure-js": "^2.0.2",
     "@azure/ms-rest-js": "^2.1.0",
     "@azure/ms-rest-nodeauth": "^3.0.6",
     "@azure/storage-blob": "^12.4.0",
-    "crypto": "^1.0.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -37,8 +36,8 @@
     "@types/uuid": "^8.3.0",
     "@types/whatwg-url": "^8.0.0",
     "dotenv": "^8.0.0",
+    "eslint": "^7.21.0",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   },
   "homepage": "https://github.com/Azure-Samples/bing-search-node",
