--- a/AMSv3Samples/sample.env
+++ b/AMSv3Samples/sample.env
@@ -1,4 +1,4 @@
-# copy the content of this file to a file named ".env". It should be stored at the root of the repo.
+# copy the content of this file to a file named ".env". Make sure to include the "." and dont name it only "env".  It should be stored at the root of the repo.
 # Make sure to exclude this file from Git Hub checkins using a .gitignore file
 
 # The values can be obtained from the API Access page for your Media Services account in the portal.
