--- a/AMSv3Samples/tsconfig.json
+++ b/AMSv3Samples/tsconfig.json
@@ -33,10 +33,10 @@
     "node_modules"
   ],
   "include": [
-    "HelloWorld-ListAssets/*.ts",
-    "StreamFilesSample/*.ts",
-    "StreamFilesWithDRMSample/*.ts",
-    "VideoIndexerSample/*.ts",
+    //"HelloWorld-ListAssets/*.ts",
+    //"StreamFilesSample/*.ts",
+    //"StreamFilesWithDRMSample/*.ts",
+    //"VideoIndexerSample/*.ts",
     "Live/*.ts"
   ]
 }
