Updated the List Assets sample

--- a/AMSv3Samples/tsconfig.json
+++ b/AMSv3Samples/tsconfig.json
@@ -33,7 +33,7 @@
     "node_modules"
   ],
   "include": [
-    //"HelloWorld-ListAssets/*.ts",
+    "HelloWorld-ListAssets/*.ts",
     //"StreamFilesSample/*.ts",
     //"StreamFilesWithDRMSample/*.ts",
     //"VideoIndexerSample/*.ts",
