updated the Stream samples

--- a/AMSv3Samples/tsconfig.json
+++ b/AMSv3Samples/tsconfig.json
@@ -34,8 +34,8 @@
   ],
   "include": [
     "HelloWorld-ListAssets/*.ts",
-    //"StreamFilesSample/*.ts",
-    //"StreamFilesWithDRMSample/*.ts",
+    "StreamFilesSample/*.ts",
+    "StreamFilesWithDRMSample/*.ts",
     //"VideoIndexerSample/*.ts",
     "Live/*.ts"
   ]
