--- a/AMSv3Samples/package.json
+++ b/AMSv3Samples/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "@azure/abort-controller": "^1.0.2",
     "@azure/arm-mediaservices": "10.0.0-beta.1",
-    "@azure/arm-storage": "^17.0.0-beta.1",
     "@azure/core-lro": "^2.2.1",
     "@azure/identity": "^2.0.0",
+    "@azure/storage-blob": "^12.4.0",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
