added create account sample

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
     "StreamFilesWithDRMSample/*.ts",
     "VideoAnalytics/*.ts",
     "Live/*.ts",
-    "VideoEncoding/*/*.ts"
+    "VideoEncoding/*/*.ts",
+    "Account/*.ts"
   ]
 }
