Added Encoding sample showing Event Hubs support

--- a/sample.env
+++ b/sample.env
@@ -11,6 +11,12 @@ RESOURCEGROUP="amsResourceGroup"
 SUBSCRIPTIONID="00000000-0000-0000-0000-000000000000"
 ARMAADAUDIENCE="https://management.core.windows.net/"
 ARMENDPOINT="https://management.azure.com/"
+STORAGECONNECTIONSTRING = ""
+
+# Event Hub settings to listen to Event Grid subscription based samples
+EVENTHUB_CONNECTION_STRING= ""
+EVENTHUB_NAME= ""
+CONSUMER_GROUP_NAME= "$Default"
 
 # You must change this if you are using Gov Cloud, China, or other non standard cloud regions
 AADENDPOINT="https://login.microsoftonline.com"
