--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@azure/arm-mediaservices": "10.0.0-beta.1",
     "@azure/core-lro": "^2.2.2",
     "@azure/event-hubs": "^5.7.0-beta.1",
+    "@azure/eventgrid": "^4.5.0",
     "@azure/identity": "^2.0.0",
     "@azure/storage-blob": "^12.4.0",
     "fs": "0.0.1-security",
