added more Live samples and event hub sample for live

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,8 +37,7 @@
     "StreamFilesSample/*.ts",
     "StreamFilesWithDRMSample/*.ts",
     "VideoAnalytics/*.ts",
-    "Live/*.ts",
     "VideoEncoding/*/*.ts",
     "Account/*.ts"
-  ]
+,   "Live/*/*.ts"  ]
 }
