--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@azure/abort-controller": "^1.0.2",
-    "@azure/arm-mediaservices": "10.0.0-beta.1",
+    "@azure/arm-mediaservices": "^10.0.0",
     "@azure/core-lro": "^2.2.2",
     "@azure/event-hubs": "^5.7.0-beta.1",
     "@azure/eventgrid": "^4.5.0",
