--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "pwa-node",
+            "type": "node",
             "request": "launch",
             "name": "Launch Program",
             "skipFiles": [
@@ -16,7 +16,10 @@
             "preLaunchTask": "tsc: build - tsconfig.json",
             "outFiles": [
                 "${workspaceFolder}/dist/**/*.js"
-            ]
+            ],
+            "env": { 
+                //"AZURE_LOG_LEVEL" : "verbose", // Global setting for Azure logger - for details https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/core/logger/README.md 
+            }
         }
     ]
 }
