--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
     "HelloWorld-ListAssets/*.ts",
     "StreamFilesSample/*.ts",
     "StreamFilesWithDRMSample/*.ts",
+    "ContentProtection/*/*.ts",
     "VideoAnalytics/*.ts",
     "AudioAnalytics/*.ts",
     "VideoEncoding/*/*.ts",
