Added more samples and copy codec examples (#17)
* Edits to readme

* Edits

* updates

* updates

* updated the ovelay and modified the transform factory to be not a class.

* moved position of overlay

* fixed overlay timing

* added commment to the videoOvelay sample

* updated the audio analytics sample file

* added Sprite VTT Thumbnail sample

* added stitch two clips, but not working yet for some reason

* Updates to support DRM and some encoding settings.
Also verbose logging support in some samples.

* updated DRM samples

* added to readme

* updated asset filter sample

* updated error messages

* Added some copy codec samples

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,10 @@
   ],
   "include": [
     "HelloWorld-ListAssets/*.ts",
+    "Streaming/*/*.ts",
     "StreamFilesSample/*.ts",
     "StreamFilesWithDRMSample/*.ts",
+    "ContentProtection/*/*.ts",
     "VideoAnalytics/*.ts",
     "AudioAnalytics/*.ts",
     "VideoEncoding/*/*.ts",
