Added new remote storage batch encoding sample.

--- a/sample.env
+++ b/sample.env
@@ -25,3 +25,10 @@ AADENDPOINT="https://login.microsoftonline.com"
 
 # DRM Testing
 DRMSYMMETRICKEY="add random base 64 encoded string here"
+
+# (OPTIONAL - for Encoding_Bulk_Remote_Storage_Account_SAS sample)
+# Remote Storage account SAS - you need to get this in your remote storage account under the Shared Access Keys menu. 
+# Generate a Read/List SAS token URL in the portal under the storage accounts "shared access signature" menu
+# Grant the allowed resource types : Service, Container, and Object
+# Grant the allowed permissions: Read, List
+REMOTESTORAGEACCOUNTSAS = "https://<youraccountname>.blob.core.windows.net/?<sas signature>"
