--- a/sample.env
+++ b/sample.env
@@ -26,9 +26,12 @@ AADENDPOINT="https://login.microsoftonline.com"
 # DRM Testing
 DRMSYMMETRICKEY="add random base 64 encoded string here"
 
-# (OPTIONAL - for Encoding_Bulk_Remote_Storage_Account_SAS sample)
+# /VideoEncoding/Encoding_Bulk_Remote_Storage_Account_SAS
+# (OPTIONAL)
 # Remote Storage account SAS - you need to get this in your remote storage account under the Shared Access Keys menu. 
 # Generate a Read/List SAS token URL in the portal under the storage accounts "shared access signature" menu
 # Grant the allowed resource types : Service, Container, and Object
 # Grant the allowed permissions: Read, List
 REMOTESTORAGEACCOUNTSAS = "https://<youraccountname>.blob.core.windows.net/?<sas signature>"
+# Set the output container SAS (grant write permissions) for this sample
+OUTPUTCONTAINERSAS="https://<youraccountname>.blob.core.windows.net/<container>?<sas signature>"
