Added Managed Identity sample

--- a/sample.env
+++ b/sample.env
@@ -11,7 +11,10 @@ RESOURCEGROUP="amsResourceGroup"
 SUBSCRIPTIONID="00000000-0000-0000-0000-000000000000"
 ARMAADAUDIENCE="https://management.core.windows.net/"
 ARMENDPOINT="https://management.azure.com/"
-STORAGECONNECTIONSTRING = ""
+STORAGEACCOUNTNAME = ""
+
+# (OPTIONAL) User Assigned Managed Identity Name
+USERASSIGNEDIDENTITY = ""
 
 # Event Hub settings to listen to Event Grid subscription based samples
 EVENTHUB_CONNECTION_STRING= ""
