--- a/sample.env
+++ b/sample.env
@@ -2,10 +2,10 @@
 # Make sure to exclude this file from GitHub checkins using a .gitignore file
 
 # The values can be obtained from the API Access page for your Media Services account in the portal.
-AADCLIENTID="00000000-0000-0000-0000-000000000000"
-AADSECRET="00000000-0000-0000-0000-000000000000"
-AADTENANTDOMAIN="microsoft.onmicrosoft.com"
-AADTENANTID="00000000-0000-0000-0000-000000000000"
+AZURE_CLIENT_ID="00000000-0000-0000-0000-000000000000"
+AZURE_CLIENT_SECRET="00000000-0000-0000-0000-000000000000"
+AZURE_TENANT_DOMAIN="microsoft.onmicrosoft.com"
+AZURE_TENANT_ID="00000000-0000-0000-0000-000000000000"
 ACCOUNTNAME="amsaccount"
 RESOURCEGROUP="amsResourceGroup"
 SUBSCRIPTIONID="00000000-0000-0000-0000-000000000000"
