Updating the Environent variables

--- a/sample.env
+++ b/sample.env
@@ -6,15 +6,15 @@ AZURE_CLIENT_ID="00000000-0000-0000-0000-000000000000"
 AZURE_CLIENT_SECRET="00000000-0000-0000-0000-000000000000"
 AZURE_TENANT_DOMAIN="microsoft.onmicrosoft.com"
 AZURE_TENANT_ID="00000000-0000-0000-0000-000000000000"
-ACCOUNTNAME="amsaccount"
-RESOURCEGROUP="amsResourceGroup"
-SUBSCRIPTIONID="00000000-0000-0000-0000-000000000000"
-ARMAADAUDIENCE="https://management.core.windows.net/"
-ARMENDPOINT="https://management.azure.com/"
-STORAGEACCOUNTNAME = ""
+AZURE_MEDIA_SERVICES_ACCOUNT_NAME="amsaccount"
+AZURE_RESOURCE_GROUP="amsResourceGroup"
+AZURE_SUBSCRIPTION_ID="00000000-0000-0000-0000-000000000000"
+AZURE_TOKEN_AUDIENCE="https://management.core.windows.net/"
+AZURE_ARM_ENDPOINT="https://management.azure.com/"
+AZURE_STORAGE_ACCOUNT_NAME = ""
 
 # (OPTIONAL) User Assigned Managed Identity Name
-USERASSIGNEDIDENTITY = ""
+AZURE_USER_ASSIGNED_IDENTITY = ""
 
 # Event Hub settings to listen to Event Grid subscription based samples
 EVENTHUB_CONNECTION_STRING= ""
