Added example of filtering with Odata on Assets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,7 @@
     "VideoAnalytics/*.ts",
     "AudioAnalytics/*.ts",
     "VideoEncoding/*/*.ts",
-    "Account/*.ts"
-,   "Live/*/*.ts"  ]
+    "Account/*.ts",
+    "Assets/*.ts",
+    "Live/*/*.ts"  ]
 }
