--- a/Player/examples/shaka/package.json
+++ b/Player/examples/shaka/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "vite"
+        "dev": "vite"
     },
     "dependencies": {
         "shaka-player": "^4.2.3",
